Added for meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:description" content="Easily calculate your GPA and CGPA by selecting your descipline, year and courses.">
+  <meta name="description" content="A CGPA Calculator for Science Education students and all. Easily select your descipline, year and courses to calculate your GPA and cummulative CPA. Includes support for extra courses and accurate grade point calculations.">
+  <meta property="og:image" content="https://nau-cgpacalc.netlify.app/assest/ogdisplay.PNG">
+    <meta property="og:title" content="Science Education CGPA Calculator">
   <title>Science Education CGPA Calculator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -62,7 +66,7 @@
             </div>
             </div>
 
-            <span class="author">&copy;Developed by Krest</span>
+            <a class="author" href="https://wa.me/+2349015737983" target="_blank">&copy;Developed by Krest</a>
     </div>
 
   <script src="courses.js"></script>
