--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:description" content="Easily calculate your GPA and CGPA by selecting your descipline, year and courses.">
   <meta name="description" content="A CGPA Calculator for Science Education students and all. Easily select your descipline, year and courses to calculate your GPA and cummulative CPA. Includes support for extra courses and accurate grade point calculations.">
-  <meta property="og:image" content="https://nau-cgpacalc.netlify.app/assest/ogdisplay.PNG">
+  <meta property="og:image" content="https://nau-cgpacalc.netlify.app/assest/ogdisplay.png">
     <meta property="og:title" content="Science Education CGPA Calculator">
+
   <title>Science Education CGPA Calculator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <div class="container"> 
+    <div class="container">
             
                 <img class="logo" src="./assest/departmentlogo.jpeg" alt="departmentlogo">
                 <h1 >NAU - Science Education CGPA Calculator</h1>
